Design improvement for all add and show popover pages to avoid a cut 'speichern' and overlapping as screenshot from diego showed.

--- a/src/global.scss
+++ b/src/global.scss
@@ -1468,6 +1468,10 @@ p {
   width: 50%;
 }
 
+.width-50px {
+  width: 50px;
+}
+
 .width-100-minus-26 {
   width: calc(100%-26px);
 }
